--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Property Management</title>
+    <!-- Asegúrate de tener este link a tu archivo CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,17 +15,17 @@
 <div class="form-container">
     <h2>Add New Property</h2>
     <form id="property-form">
-        <label for="address">Address: </label>
-        <input type="text" id="address" name="address" required><br><br>
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" required>
 
-        <label for="price">Price: </label>
-        <input type="number" id="price" name="price" required><br><br>
+        <label for="price">Price:</label>
+        <input type="number" id="price" name="price" required>
 
-        <label for="size">Size (sq. ft.): </label>
-        <input type="number" id="size" name="size" required><br><br>
+        <label for="size">Size (mts2):</label>
+        <input type="number" id="size" name="size" required>
 
-        <label for="description">Description: </label>
-        <textarea id="description" name="description" required></textarea><br><br>
+        <label for="description">Description:</label>
+        <textarea id="description" name="description" required></textarea>
 
         <button type="submit" class="btn">Submit</button>
     </form>
@@ -49,6 +50,7 @@
     </table>
 </div>
 
+<!-- Tu script para manejar la lógica -->
 <script src="script.js"></script>
 
 </body>
